exports[`Activity should render the failed status component 1`] = `
<div className="card">
<div className="card__item soft text-left soft-bottom rounded text-light-primary background--alert">
<div className="floating text-left">
<i className="soft-half-right">
<Error width="30px" height="31px" fill="#FFFFFF" />
</i>
<h5 className="display-inline-block floating__item soft-half-bottom">
Dec 25, 2016
</h5>
</div>
<p>
You did something awesome and I&#39;ve never been more proud.
</p>
<Link to="https://my.newspring.cc/give/now" className="text-light-primary" onlyActiveOnIndex={false} style={{...}}>
<h5 className="display-inline-block">
Click This Link
</h5>
<span className="icon-arrow-next soft-half-left" />
</Link>
</div>
</div>
`;

exports[`Activity should render the warning status component 1`] = `
<div className="card">
<div className="card__item soft text-left soft-bottom rounded text-light-primary background--dark-primary">
<div className="floating text-left">
<i className="soft-half-right">
<Error width="30px" height="31px" fill="#FFFFFF" />
</i>
<h5 className="display-inline-block floating__item soft-half-bottom">
Dec 25, 2016
</h5>
</div>
<p>
You did something awesome and I&#39;ve never been more proud.
</p>
<Link to="https://my.newspring.cc/give/now" className="text-light-primary" onlyActiveOnIndex={false} style={{...}}>
<h5 className="display-inline-block">
Click This Link
</h5>
<span className="icon-arrow-next soft-half-left" />
</Link>
</div>
</div>
`;

exports[`Activity should render with the default set of props 1`] = `
<div className="card">
<div className="card__item soft text-left soft-bottom rounded text-light-primary background--primary">
<div className="floating text-left">
<i className="soft-half-right">
<Success width="30px" height="31px" fill="#FFFFFF" />
</i>
<h5 className="display-inline-block floating__item soft-half-bottom">
Dec 25, 2016
</h5>
</div>
<p>
You did something awesome and I&#39;ve never been more proud.
</p>
<Link to="https://my.newspring.cc/give/now" className="text-light-primary" onlyActiveOnIndex={false} style={{...}}>
<h5 className="display-inline-block">
Click This Link
</h5>
<span className="icon-arrow-next soft-half-left" />
</Link>
</div>
</div>
`;
